[tool.poetry]
name = "ultralytics-poetry"
version = "0.1.0"
description = ""
authors = ["peter_pan <peter_pan@sera-network.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.26.4"
ultralytics = "^8.3.197"
tensorflow = "2.18"
onnx = ">=1.12.0,<=1.16.0"
onnxslim = "0.1.67"
onnxruntime = "^1.22.1"
jupyterlab = "^4.4.7"
tflite-runtime = "2.14.0"
cython-bbox = "0.1.5"
loguru = "^0.7.3"
pycocotools = "^2.0.10"
tabulate = "0.9.0"
lap = "0.5.12"
filterpy = "1.4.5"
motmetrics = "^1.4.0"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
